# MXNetModels

./: .gitignore
01-basic/A-hello-cmake/: CMakeLists.txt  main
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/include/: Hello.h
01-basic/B-hello-headers/src/: Hello.cpp  main.cpp
Bproj_01_mylap/: CMakeLists.txt  main.cpp  stest.cpp  stest.hpp
CMake-Cheatsheet/examples/example1/: CMakeLists.txt
CMake-Cheatsheet/examples/example1/include/: CMakeLists.txt  foo.cpp  foo.hpp
CMake-Cheatsheet/examples/example1/src/: CMakeLists.txt  main.cpp
CMake-Cheatsheet/examples/example6/somelib/: CMakeLists.txt
SandBox_01/: CMakeLists.txt
SandBox_01/includes/: mxlib_01.cpp  mxlib_01.hpp
SandBox_01/src/: main.cpp
Train_test_model/TestingNN/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.hpp  ModelHandle.cpp  ModelHandle.hpp  main.cpp
Train_test_model/TrainingNN/: CMakeLists_old.txt  main.cpp  networks_bn.cpp  networks_bn.hpp
